Edited the source of images

--- a/recipes/Casserole.html
+++ b/recipes/Casserole.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Cheesy Ham and Hash Brown Casserole</h1>
 
-    <img src="images/casserole.webp" alt="Casserole">
+    <img src="../images/casserole.jpeg" alt="Casserole">
     <h3>Recipe for Cheesy Ham and Hash Brown Casserole</h3>
     <p>This ham and hash brown casserole is quick and easy to make, not to mention delicious! I mostly serve this as a breakfast casserole, but it's great anytime. It may be served with or without diced ham.</p>
 
