--- a/recipes/Cofee-cake.html
+++ b/recipes/Cofee-cake.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Cofee Cake</h1>
 
-    <img src="images/cofee-cake.webp" alt="Cofee Cake">
+    <img src="../images/cofee-cake.jpeg" alt="Cofee Cake">
     <h3>Recipe for Cranberry Upside-Down Coffee Cake</h3>
     <p>Cranberries and pecans are baked in the bottom of this cake. Turn the cake over for ooh's and ah's.</p>
 
