--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
     
    <h1>Lasagna</h1> 
 
-   <img src="images/lasagna.webp" alt="Lasagna">
+   <img src="../images/lasagna.jpeg" alt="Lasagna">
    <h3>Recipe for Lasagna</h3>
    <p>Making lasagna can be time-consuming, but the results are well worth the wait.</p>
 
