Added css and edited html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
-        <a href="recipes/Casserole.html">Casserole</a>
-        <a href="recipes/Cofee-cake.html">Cofee Cake</a>
+        <h1 class="title">Odin Recipes</h1>
+        <a class="recipes lasagna" href="recipes/lasagna.html">Lasagna</a>
+        <a class="recipes casserole" href="recipes/Casserole.html">Casserole</a>
+        <a class="recipes cofee-cake" href="recipes/Cofee-cake.html">Cofee-Cake</a>
     </body>
 </html>
