--- a/recipes/Casserole.html
+++ b/recipes/Casserole.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Cheesy Ham and Hash Brown Casserole</h1>
+    <h1 class="title">Cheesy Ham and Hash Brown Casserole</h1>
 
-    <img src="../images/casserole.jpeg" alt="Casserole">
-    <h3>Recipe for Cheesy Ham and Hash Brown Casserole</h3>
-    <p>This ham and hash brown casserole is quick and easy to make, not to mention delicious! I mostly serve this as a breakfast casserole, but it's great anytime. It may be served with or without diced ham.</p>
+    <a href="../index.html" class="home">Home</a>
 
-    <h4>Ingredients</h4>
-    <ul>
+    <img src="../images/casserole.jpeg" alt="Casserole" class="img">
+    <h3 class="subtitle">Recipe for Cheesy Ham and Hash Brown Casserole</h3>
+    <p class="description">This ham and hash brown casserole is quick and easy to make, not to mention delicious! I mostly serve this as a breakfast casserole, but it's great anytime. It may be served with or without diced ham.</p>
+
+    <h4 class="ing">Ingredients</h4>
+    <ul class="ucontainer">
         <li>cooking spray</li>
         <li>1 (32 ounce) package frozen hash brown potatoes </li>
         <li>2 (10.5 ounce) cans condensed cream of potato soup</li>
@@ -24,7 +27,8 @@
         <li>1 ½ cups grated Parmesan cheese</li>
     </ul>
 
-    <ol>
+    <h4 class="steps">Steps</h4>
+    <ol class="ocontainer">
         <li>Preheat the oven to 375 degrees F (190 degrees C). Lightly grease a 9x13-inch baking dish with cooking spray.</li>
         <li>Mix together hash browns, condensed soup, sour cream, Cheddar cheese, and ham in a bowl until well combined. Spread evenly into the prepared dish. Sprinkle with Parmesan cheese.</li>
         <li>Bake in the preheated oven until bubbly and lightly brown, about 1 hour.</li>
