--- a/recipes/Cofee-cake.html
+++ b/recipes/Cofee-cake.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Cofee Cake</h1>
+    <h1 class="title">Cofee Cake</h1>
 
-    <img src="../images/cofee-cake.jpeg" alt="Cofee Cake">
-    <h3>Recipe for Cranberry Upside-Down Coffee Cake</h3>
-    <p>Cranberries and pecans are baked in the bottom of this cake. Turn the cake over for ooh's and ah's.</p>
+    <a href="../index.html" class="home">Home</a>
 
-    <h4>Ingredients</h4>
-    <ul>
+    <img src="../images/cofee-cake.jpeg" alt="Cofee Cake" class="img">
+    <h3 class="subtitle">Recipe for Cranberry Upside-Down Coffee Cake</h3>
+    <p class="description">Cranberries and pecans are baked in the bottom of this cake. Turn the cake over for ooh's and ah's.</p>
+
+    <h4 class="ing">Ingredients</h4>
+    <ul class="ucontainer">
         <li>⅔ cup packed brown sugar</li>
         <li>⅓ cup butter</li>
         <li>1 ¼ cups cranberries</li>
@@ -31,7 +34,8 @@
         <li>¼ teaspoon salt</li>
     </ul>
 
-    <ol>
+    <h4 class="steps">Steps</h4>
+    <ol class="ocontainer">
         <li>Preheat oven to 350 degrees F (175 degrees C). Wrap the outside of a 9 inch springform pan with aluminum foil to prevent leaking. Sift together the flour, baking powder, baking soda, cinnamon and salt. Set aside.</li>
         <li>In a saucepan over medium heat, combine brown sugar and 1/3 cup butter. Bring to a boil, then pour into bottom of springform pan. Sprinkle with cranberries and pecans.</li>
         <li>In a large bowl, cream together the butter and 3/4 cup sugar until light and fluffy. Beat in the eggs one at a time, then stir in the vanilla. Beat in the flour mixture alternately with the sour cream. Pour batter into prepared pan.</li>
