--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     
-   <h1>Lasagna</h1> 
+   <h1 class="title">Lasagna</h1>
 
-   <img src="../images/lasagna.jpeg" alt="Lasagna">
-   <h3>Recipe for Lasagna</h3>
-   <p>Making lasagna can be time-consuming, but the results are well worth the wait.</p>
+   <a href="../index.html" class="home">Home</a>
 
-   <h4>Ingredients</h4>
-   <ul>
+   <img src="../images/lasagna.jpeg" alt="Lasagna" class="img">
+   <h3 class="subtitle">Recipe for Lasagna</h3>
+   <p class="description">Making lasagna can be time-consuming, but the results are well worth the wait.</p>
+
+   <h4 class="ing">Ingredients</h4>
+   <ul class="ucontainer">
     <li>Meat</li>
     <li>Onion and Garlic</li>
     <li>Tomato Products</li>
@@ -26,8 +29,8 @@
     <li>Egg</li>
    </ul>
 
-   <h4>Steps</h4>
-   <ol>
+   <h4 class="steps">Steps</h4>
+   <ol class="ocontainer">
     <li>Make the meat sauce</li>
     <li>Cook the noodles</li>
     <li>Make the ricotta mixture</li>
